ログイン機能追加

--- a/css/index.scss
+++ b/css/index.scss
@@ -1,11 +1,11 @@
 .form_container {
-    display: none;
+    // display: none;
     width: 500px;
     input {
-        width: 30%;
+        width: 80%;
     }
     input[type="submit"] {
-        width: 10%;
+        width: 50%;
     }
 }
 
