--- a/css/index.css
+++ b/css/index.css
@@ -9,3 +9,14 @@
 .form_container input[type="submit"] {
   width: 50%;
 }
+
+.form_container .new_btn {
+  width: 50%;
+  margin-top: 10px;
+  display: inline-block;
+}
+
+.form_container a {
+  text-decoration: none;
+  color: #000;
+}
